# financial-10k-text-agent

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  FINANCIAL_TEXT_FACTOR_LAB_GLOBAL_WORKFLOW.md  LICENSE  Makefile  README.en.md  README.md  README.zh-CN.md  REMOTE_UPLOAD_CHECK.md  pyproject.toml
.github/workflows/: pages.yml  tests.yml
configs/text_factor_lab/: 30_company_public_fmp_alpha.yaml  50_company_public_fmp_alpha.yaml  50_company_public_fmp_alpha_v2.yaml  50_company_public_fmp_alpha_v3.yaml  50_company_public_fmp_alpha_v4.yaml  e2e_smoke.yaml  mvp_v0.yaml  real_10k_2016_2025.yaml  real_10k_company_panel_nasdaq_sharadar.yaml  real_10k_large_universe_2016_2025.yaml  (+1 more)
data_manifests/: 50_company_api_coverage_audit.json  50_company_api_coverage_audit_post_replacement.json  50_company_extraction_readiness_report.json  crsp_wrds_data_manifest.template.json  nasdaq_sharadar_data_manifest.template.json  public_data_manifest.json
docs/: data_sources_10_company_fmp_alpha.md  data_sources_50_company_fmp_yahoo.md  deployment.md  system_architecture_and_roadmap.md  working_paper_positioning.md
docs/releases/: v0.1.0.md  (+17 more)
scripts/: analyze_real_10k_run.py  build_static_website.py  extract_fmp_alpha_10_company_panel.py  extract_nasdaq_sharadar_company_panel.py  extract_wrds_crsp_company_panel.py  prepare_real_10k_run.py
tests/: test_audit_coverage_denominator.py  test_audit_engine.py  test_backtest_evaluation.py  test_bootstrap_inference.py  test_config_schema.py  test_coverage_waterfall.py  test_data_providers.py  test_diagnostics.py  test_e2e_smoke.py  test_event_date_calendar.py  test_fmp_alpha_extraction_script.py  test_inference_multiple_testing.py  test_label_builder.py  test_model_training.py  test_nasdaq_sharadar_extraction_script.py  test_prices.py  test_project_smoke.py  test_rank_ic.py  test_report_generator.py  test_rolling_split.py  test_run_manager.py  test_schema_validation.py  test_sec_10k_sections.py  test_sec_edgar.py  test_text_features.py  test_universe.py  test_website_content.py  test_wrds_crsp_extraction_script.py
website/: index.html  index.zh-CN.html  methods.html  methods.zh-CN.html  results.html  results.zh-CN.html
(+182 files in other folders)
