[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-10k-text-agent"
version = "0.14.0"
description = "Financial Text Factor Lab Agent MVP v0"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["finance", "nlp", "sec-edgar", "10-k", "factor-research", "backtesting"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pandas-market-calendars>=4.0",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
ml = [
  "xgboost>=2.0",
]

[project.scripts]
text-factor-lab = "text_factor_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

